--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "mongoose": "^8.10.0",
     "morgan": "~1.9.1",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.9"
   }
 }
